engr441/while-jvm/tests/invalid-defassign/DefiniteAssign_Invalid_7.while
int f(int x) {
    int y;
    for(int i=0; i < x; i=y+1) {
        x = x + 1;
    }
    return x;
}
